--- a/src/components/Setup.css
+++ b/src/components/Setup.css
@@ -69,7 +69,6 @@
 }
 
 .next-step-button{
-  display:block;
   margin:40px auto 0 auto;
 }
 
