--- a/src/components/Transfer.scss
+++ b/src/components/Transfer.scss
@@ -71,6 +71,5 @@ input {
   height: 44px;
 }
 .send-transaction-button {
-  display:block;
-  margin: 30px auto;
+  margin-top: 30px;
 }
